@@ -31,14 +31,15 @@ macro(set_and_check _var _file)
   endif()
 endmacro()
 
-set_and_check (MONGOC_INCLUDE_DIRS "${PACKAGE_PREFIX_DIR}/include/libmongoc-1.0")
-set (MONGOC_INCLUDE_DIRS ${MONGOC_INCLUDE_DIRS} ${BSON_INCLUDE_DIRS})
+set_and_check (MONGOC_STATIC_INCLUDE_DIRS "${PACKAGE_PREFIX_DIR}/include/libmongoc-1.0")
+set (MONGOC_STATIC_INCLUDE_DIRS ${MONGOC_STATIC_INCLUDE_DIRS} ${BSON_STATIC_INCLUDE_DIRS})
 
 # We want to provide an absolute path to the library and we know the
 # directory and the base name, but not the suffix, so we use CMake's
-# find_library() to pick that up.
-find_library(MONGOC_STATIC_LIBRARY_PATH mongoc-static-1.0 PATHS "${PACKAGE_PREFIX_DIR}/lib" NO_DEFAULT_PATH)
-set (MONGOC_STATIC LIBRARIES ${MONGOC_LIBRARY_PATH} ${BSON_STATIC_LIBRARIES})
+# find_library() to pick that up.  Users can override this by configuring
+# MONGOC_STATIC_LIBRARY themselves.
+find_library(MONGOC_STATIC_LIBRARY mongoc-static-1.0 PATHS "${PACKAGE_PREFIX_DIR}/lib" NO_DEFAULT_PATH)
+set (MONGOC_STATIC_LIBRARIES ${MONGOC_STATIC_LIBRARY} ${BSON_STATIC_LIBRARIES})
 
 # If this file is generated by the Autotools on Mac, SSL_LIBS might be
 # "-framework CoreFoundation -framework Security". Split into a CMake array
@@ -56,4 +57,4 @@ foreach (LIB @SASL_LIBS@ @SSL_LIBS@ @SHM_LIB@)
    endif ()
 endforeach ()
 
-set (MONGOC_DEFINITIONS MONGOC_STATIC ${BSON_STATIC_DEFINITIONS})
+set (MONGOC_STATIC_DEFINITIONS MONGOC_STATIC ${BSON_STATIC_DEFINITIONS})
